[B]2.5.1[/B]
- removed and factored out GetIMDBAKATitlesById to IMDb scraper library
- removed and factored out scraping certification to IMDb scraper library

[B]2.5.0[/B]
- added: Set title scraping from TMDb
- refactored: scraper settings
- re-added: setting for artwork scaling

[B]2.4.0[/B]
- added: Get Trailers from TMDb
- fixed: outline was not scraped under certain circumtances
- removed: setting for artwork scaling

[B]2.3.5[/B]
- added: prioritize 'imdb display title' when scraping AKA titles

[B]2.3.4[/B]
- fixed: factored out genres to common

[B]2.3.3[/B]
- fixed: failed to fetch country and genre due to site changes

[B]2.3.1/2.3.2[/B]
- fixed: version bump in order to fix broken dependency

[B]2.3.0[/B]
- added: option to scrape trailer links directly from YouTube, credits to ZackDepp

[B]2.2.6[/B]
- fixed: Originaltitle some time contains 'IMDb - ' string

[B]2.2.5[/B]
- fixed: IMDb rating, MPAA rating and plot outline after site changes

[B]2.2.4[/B]
- fixed: missing imdb ID in search results due to site changes

[B]2.2.3[/B]
- fixed: IMDb rating

[B]2.2.2[/B]
- fixed: make sure imdb ID picked up correctly from international sites

[B]2.2.1[/B]
- fixed: wrong imdb ID detection other certain circumtances

[B]2.2.0[/B]
- Better USA/International title recognition + make NfoUrl imdb site independent

[B]2.1.9[/B]
- fixed: actor roles and remove scraping of imdb trailers

[B]2.1.8[/B]
- fixed: some movies won't scrape at all

[B]2.1.7[/B]
- fixed: actor images

[B]2.1.6[/B]
- fixed: real fix for hd-trailers.net

[B]2.1.5[/B]
- fixed: trailer scraping from hd-trailers.net

[B]2.1.4[/B]
- fixed: fixed artists due to IMDb changes

[B]2.1.3[/B]
- fixed: fix previous commit

[B]2.1.2[/B]
- fixed: title scraping due to site changes

[B]2.1.1[/B]
- changed: re-added fixchars

[B]2.1.0[/B]
- changed: scrape only 1 studio

[B]2.0.11[/B]
- changed: move scraping of IMDb rating out to IMDb scraper library

[B]2.0.10[/B]