@@ -1,3 +1,6 @@
+[B]2.5.2[/B]
+- added: some improvement to match movies by their International Titles
+
 [B]2.5.1[/B]
 - removed and factored out GetIMDBAKATitlesById to IMDb scraper library
 - removed and factored out scraping certification to IMDb scraper library
